feat: 统一部分日志页面 (#3035)
